cabal-version:      2.2
name:               amazonka-cloudtrail
version:            1.6.1
synopsis:           Amazon CloudTrail SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2013-11-01@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.CloudTrail.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.CloudTrail" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-cloudtrail

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.CloudTrail
    Network.AWS.CloudTrail.AddTags
    Network.AWS.CloudTrail.CreateTrail
    Network.AWS.CloudTrail.DeleteTrail
    Network.AWS.CloudTrail.DescribeTrails
    Network.AWS.CloudTrail.GetEventSelectors
    Network.AWS.CloudTrail.GetInsightSelectors
    Network.AWS.CloudTrail.GetTrail
    Network.AWS.CloudTrail.GetTrailStatus
    Network.AWS.CloudTrail.Lens
    Network.AWS.CloudTrail.ListPublicKeys
    Network.AWS.CloudTrail.ListTags
    Network.AWS.CloudTrail.ListTrails
    Network.AWS.CloudTrail.LookupEvents
    Network.AWS.CloudTrail.PutEventSelectors
    Network.AWS.CloudTrail.PutInsightSelectors
    Network.AWS.CloudTrail.RemoveTags
    Network.AWS.CloudTrail.StartLogging
    Network.AWS.CloudTrail.StopLogging
    Network.AWS.CloudTrail.Types
    Network.AWS.CloudTrail.Types.AdvancedEventSelector
    Network.AWS.CloudTrail.Types.AdvancedFieldSelector
    Network.AWS.CloudTrail.Types.DataResource
    Network.AWS.CloudTrail.Types.Event
    Network.AWS.CloudTrail.Types.EventCategory
    Network.AWS.CloudTrail.Types.EventSelector
    Network.AWS.CloudTrail.Types.InsightSelector
    Network.AWS.CloudTrail.Types.InsightType
    Network.AWS.CloudTrail.Types.LookupAttribute
    Network.AWS.CloudTrail.Types.LookupAttributeKey
    Network.AWS.CloudTrail.Types.PublicKey
    Network.AWS.CloudTrail.Types.ReadWriteType
    Network.AWS.CloudTrail.Types.Resource
    Network.AWS.CloudTrail.Types.ResourceTag
    Network.AWS.CloudTrail.Types.Tag
    Network.AWS.CloudTrail.Types.Trail
    Network.AWS.CloudTrail.Types.TrailInfo
    Network.AWS.CloudTrail.UpdateTrail
    Network.AWS.CloudTrail.Waiters

  reexported-modules: Network.AWS.Prelude
  build-depends:
    , amazonka-core  >=1.6.1 && <1.6.2
    , base           >=4.13  && <5

test-suite amazonka-cloudtrail-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.CloudTrail
    Test.AWS.CloudTrail.Internal
    Test.AWS.Gen.CloudTrail

  build-depends:
    , amazonka-cloudtrail
    , amazonka-core         >=1.6.1 && <1.6.2
    , amazonka-test         >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
