cabal-version:      2.2
name:               amazonka-cloudwatch-logs
version:            1.6.1
synopsis:           Amazon CloudWatch Logs SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2014-03-28@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.CloudWatchLogs.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.CloudWatchLogs" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-cloudwatch-logs

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.CloudWatchLogs
    Network.AWS.CloudWatchLogs.AssociateKmsKey
    Network.AWS.CloudWatchLogs.CancelExportTask
    Network.AWS.CloudWatchLogs.CreateExportTask
    Network.AWS.CloudWatchLogs.CreateLogGroup
    Network.AWS.CloudWatchLogs.CreateLogStream
    Network.AWS.CloudWatchLogs.DeleteDestination
    Network.AWS.CloudWatchLogs.DeleteLogGroup
    Network.AWS.CloudWatchLogs.DeleteLogStream
    Network.AWS.CloudWatchLogs.DeleteMetricFilter
    Network.AWS.CloudWatchLogs.DeleteQueryDefinition
    Network.AWS.CloudWatchLogs.DeleteResourcePolicy
    Network.AWS.CloudWatchLogs.DeleteRetentionPolicy
    Network.AWS.CloudWatchLogs.DeleteSubscriptionFilter
    Network.AWS.CloudWatchLogs.DescribeDestinations
    Network.AWS.CloudWatchLogs.DescribeExportTasks
    Network.AWS.CloudWatchLogs.DescribeLogGroups
    Network.AWS.CloudWatchLogs.DescribeLogStreams
    Network.AWS.CloudWatchLogs.DescribeMetricFilters
    Network.AWS.CloudWatchLogs.DescribeQueries
    Network.AWS.CloudWatchLogs.DescribeQueryDefinitions
    Network.AWS.CloudWatchLogs.DescribeResourcePolicies
    Network.AWS.CloudWatchLogs.DescribeSubscriptionFilters
    Network.AWS.CloudWatchLogs.DisassociateKmsKey
    Network.AWS.CloudWatchLogs.FilterLogEvents
    Network.AWS.CloudWatchLogs.GetLogEvents
    Network.AWS.CloudWatchLogs.GetLogGroupFields
    Network.AWS.CloudWatchLogs.GetLogRecord
    Network.AWS.CloudWatchLogs.GetQueryResults
    Network.AWS.CloudWatchLogs.Lens
    Network.AWS.CloudWatchLogs.ListTagsLogGroup
    Network.AWS.CloudWatchLogs.PutDestination
    Network.AWS.CloudWatchLogs.PutDestinationPolicy
    Network.AWS.CloudWatchLogs.PutLogEvents
    Network.AWS.CloudWatchLogs.PutMetricFilter
    Network.AWS.CloudWatchLogs.PutQueryDefinition
    Network.AWS.CloudWatchLogs.PutResourcePolicy
    Network.AWS.CloudWatchLogs.PutRetentionPolicy
    Network.AWS.CloudWatchLogs.PutSubscriptionFilter
    Network.AWS.CloudWatchLogs.StartQuery
    Network.AWS.CloudWatchLogs.StopQuery
    Network.AWS.CloudWatchLogs.TagLogGroup
    Network.AWS.CloudWatchLogs.TestMetricFilter
    Network.AWS.CloudWatchLogs.Types
    Network.AWS.CloudWatchLogs.Types.Destination
    Network.AWS.CloudWatchLogs.Types.Distribution
    Network.AWS.CloudWatchLogs.Types.ExportTask
    Network.AWS.CloudWatchLogs.Types.ExportTaskExecutionInfo
    Network.AWS.CloudWatchLogs.Types.ExportTaskStatus
    Network.AWS.CloudWatchLogs.Types.ExportTaskStatusCode
    Network.AWS.CloudWatchLogs.Types.FilteredLogEvent
    Network.AWS.CloudWatchLogs.Types.InputLogEvent
    Network.AWS.CloudWatchLogs.Types.LogGroup
    Network.AWS.CloudWatchLogs.Types.LogGroupField
    Network.AWS.CloudWatchLogs.Types.LogStream
    Network.AWS.CloudWatchLogs.Types.MetricFilter
    Network.AWS.CloudWatchLogs.Types.MetricFilterMatchRecord
    Network.AWS.CloudWatchLogs.Types.MetricTransformation
    Network.AWS.CloudWatchLogs.Types.OrderBy
    Network.AWS.CloudWatchLogs.Types.OutputLogEvent
    Network.AWS.CloudWatchLogs.Types.QueryDefinition
    Network.AWS.CloudWatchLogs.Types.QueryInfo
    Network.AWS.CloudWatchLogs.Types.QueryStatistics
    Network.AWS.CloudWatchLogs.Types.QueryStatus
    Network.AWS.CloudWatchLogs.Types.RejectedLogEventsInfo
    Network.AWS.CloudWatchLogs.Types.ResourcePolicy
    Network.AWS.CloudWatchLogs.Types.ResultField
    Network.AWS.CloudWatchLogs.Types.SearchedLogStream
    Network.AWS.CloudWatchLogs.Types.SubscriptionFilter
    Network.AWS.CloudWatchLogs.UntagLogGroup
    Network.AWS.CloudWatchLogs.Waiters

  reexported-modules: Network.AWS.Prelude
  build-depends:
    , amazonka-core  >=1.6.1 && <1.6.2
    , base           >=4.13  && <5

test-suite amazonka-cloudwatch-logs-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.CloudWatchLogs
    Test.AWS.CloudWatchLogs.Internal
    Test.AWS.Gen.CloudWatchLogs

  build-depends:
    , amazonka-cloudwatch-logs
    , amazonka-core             >=1.6.1 && <1.6.2
    , amazonka-test             >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
