name:                  amazonka-cloudwatch
version:               1.3.1
synopsis:              Amazon CloudWatch SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2015 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto
description:
    This is the /Amazon CloudWatch API Reference/. This guide provides
    detailed information about Amazon CloudWatch actions, data types,
    parameters, and errors. For detailed information about Amazon CloudWatch
    features and their associated API calls, go to the
    <http://docs.aws.amazon.com/AmazonCloudWatch/latest/DeveloperGuide Amazon CloudWatch Developer Guide>.

    Amazon CloudWatch is a web service that enables you to publish, monitor,
    and manage various metrics, as well as configure alarm actions based on
    data from metrics. For more information about this product go to
    <http://aws.amazon.com/cloudwatch>.

    For information about the namespace, metric names, and dimensions that
    other Amazon Web Services products use to send metrics to Cloudwatch, go
    to
    <http://docs.aws.amazon.com/AmazonCloudWatch/latest/DeveloperGuide/CW_Support_For_AWS.html Amazon CloudWatch Metrics, Namespaces, and Dimensions Reference>
    in the /Amazon CloudWatch Developer Guide/.

    Use the following links to get started using the /Amazon CloudWatch API
    Reference/:

    -   <http://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/API_Operations.html Actions>:
        An alphabetical list of all Amazon CloudWatch actions.
    -   <http://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/API_Types.html Data Types>:
        An alphabetical list of all Amazon CloudWatch data types.
    -   <http://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/CommonParameters.html Common Parameters>:
        Parameters that all Query actions can use.
    -   <http://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/CommonErrors.html Common Errors>:
        Client and server errors that all actions can return.
    -   <http://docs.aws.amazon.com/general/latest/gr/index.html?rande.html Regions and Endpoints>:
        Itemized regions and endpoints for all AWS products.
    -   <http://monitoring.amazonaws.com/doc/2010-08-01/CloudWatch.wsdl WSDL Location>:
        http:\/\/monitoring.amazonaws.com\/doc\/2010-08-01\/CloudWatch.wsdl

    In addition to using the Amazon CloudWatch API, you can also use the
    following SDKs and third-party libraries to access Amazon CloudWatch
    programmatically.

    -   <http://aws.amazon.com/documentation/sdkforjava/ AWS SDK for Java Documentation>
    -   <http://aws.amazon.com/documentation/sdkfornet/ AWS SDK for .NET Documentation>
    -   <http://aws.amazon.com/documentation/sdkforphp/ AWS SDK for PHP Documentation>
    -   <http://aws.amazon.com/documentation/sdkforruby/ AWS SDK for Ruby Documentation>

    Developers in the AWS developer community also provide their own
    libraries, which you can find at the following AWS developer centers:

    -   <http://aws.amazon.com/java/ AWS Java Developer Center>
    -   <http://aws.amazon.com/php/ AWS PHP Developer Center>
    -   <http://aws.amazon.com/python/ AWS Python Developer Center>
    -   <http://aws.amazon.com/ruby/ AWS Ruby Developer Center>
    -   <http://aws.amazon.com/net/ AWS Windows and .NET Developer Center>
    .
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information and sending requests.
    .
    Use of lenses is required for constructing and manipulating types.
    This is due to the amount of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.CloudWatch" and the <http://docs.aws.amazon.com/AmazonCloudWatch/latest/APIReference/Welcome.html AWS API Reference>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.CloudWatch
        , Network.AWS.CloudWatch.DeleteAlarms
        , Network.AWS.CloudWatch.DescribeAlarmHistory
        , Network.AWS.CloudWatch.DescribeAlarms
        , Network.AWS.CloudWatch.DescribeAlarmsForMetric
        , Network.AWS.CloudWatch.DisableAlarmActions
        , Network.AWS.CloudWatch.EnableAlarmActions
        , Network.AWS.CloudWatch.GetMetricStatistics
        , Network.AWS.CloudWatch.ListMetrics
        , Network.AWS.CloudWatch.PutMetricAlarm
        , Network.AWS.CloudWatch.PutMetricData
        , Network.AWS.CloudWatch.SetAlarmState
        , Network.AWS.CloudWatch.Types
        , Network.AWS.CloudWatch.Waiters

    other-modules:
          Network.AWS.CloudWatch.Types.Product
        , Network.AWS.CloudWatch.Types.Sum

    build-depends:
          amazonka-core == 1.3.1.*
        , base          >= 4.7     && < 5

test-suite amazonka-cloudwatch-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.CloudWatch
        , Test.AWS.Gen.CloudWatch
        , Test.AWS.CloudWatch.Internal

    build-depends:
          amazonka-core == 1.3.1.*
        , amazonka-test == 1.3.1.*
        , amazonka-cloudwatch == 1.3.1.*
        , base
        , bytestring
        , lens
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
